--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,7 +28,7 @@ h2{
 }
 
 .top-wrapper {
-  padding: 339px 0 128px 0;
+  padding: 300px 0 128px 0;
   background-image: url(danautoba2.jpg);
   background-size: cover;
   color: white;
@@ -36,20 +36,27 @@ h2{
 }
 
 .top-wrapper h1 {
-  opacity: 0.5;
-  font-size: 45px;
-  letter-spacing: 5px;
+  opacity: 1;
+  font-size: 40px;
+  letter-spacing: 3px;
+  margin-bottom: 10px;
+}
+
+.top-wrapper h3 {
+  opacity: 0.8;
+  font-size: 20px;
   margin-bottom: 10px;
 }
 
 .top-wrapper p {
-  opacity: 0.7;
+  opacity: 0.9;
   margin-bottom: 3px;
 }
 
 .btn-wrapper {
   text-align: center;
   margin: 20px 0;
+  font-weight: bold;
 }
 
 .btn-wrapper p {
@@ -67,8 +74,8 @@ h2{
   padding: 12px 24px;
   color: white;
   display: inline-block;
-  opacity: 0.8;
-  border-radius: 4px;
+  opacity: 0.9;
+  border-radius: 10px;
   text-align: center;
   transition: 300ms;
 }
@@ -88,7 +95,6 @@ header {
 }
 
 .logo {
-  /*width: 124px;*/
   margin: 0 auto;
 }
 
@@ -135,34 +141,34 @@ header {
 }
 
 .rotate {
-animation-name: rotate ;
-animation-duration: 5s;
-animation-play-state: running;
-animation-timing-function: linear;
-animation-iteration-count: infinite;
-opacity: 1.0;filter: alpha(opacity=50);
-width:200px;
-height:200px;
-border: 6px solid blue;
-border-radius: 10px;
+  animation-name: rotate ;
+  animation-duration: 5s;
+  animation-play-state: running;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  opacity: 1.0;filter: alpha(opacity=50);
+  width:200px;
+  height:200px;
+  border: 3px solid #080829;
+  border-radius: 10px;
 }
 
 img:hover {
-opacity: 1.0;
-filter: alpha(opacity=100);
+  opacity: 1.0;
+  filter: alpha(opacity=100);
 }
 
 @keyframes rotate{
-10% {transform:rotateY(36deg)}
-20% {transform:rotateY(72deg)}
-30% {transform:rotateY(108deg)}
-40% {transform:rotateY(144deg)}
-50% {transform:rotateY(180deg)}
-60% {transform:rotateY(216deg)}
-70% {transform:rotateY(252deg)}
-80% {transform:rotateY(288deg)}
-90% {transform:rotateY(324deg)}
-100% {transform:rotateY(360deg)}
+  10% {transform:rotateY(36deg)}
+  20% {transform:rotateY(72deg)}
+  30% {transform:rotateY(108deg)}
+  40% {transform:rotateY(144deg)}
+  50% {transform:rotateY(180deg)}
+  60% {transform:rotateY(216deg)}
+  70% {transform:rotateY(252deg)}
+  80% {transform:rotateY(288deg)}
+  90% {transform:rotateY(324deg)}
+  100% {transform:rotateY(360deg)}
 }
 
 .lesson-wrapper {
@@ -171,10 +177,19 @@ filter: alpha(opacity=100);
   padding-right: 5%;
   background-color: #f7f7f7;
   text-align: center;
+  padding-top: 30px;
+  
+}
+
+.heading h3 {
+    text-align: center;
+    color: #080829;
+
 }
 .lesson {
   float: left;
   width: 20%;
+  margin-top: 30px;
 }
 
 .lesson-icon {
@@ -184,28 +199,203 @@ filter: alpha(opacity=100);
 .lesson-icon p {
   width: 50%;
   display: inline-block;
-  margin-top: 15px;
   font-size: 15px;
+ 
 }
 
 .text-contents {
   width: 80%;
   display: inline-block;
-  margin-top: 15px;
   font-size: 15px;
   color: #b3aeb5;
-  text-align: justify;
-  font-family: Arial;
+  text-align: center;
+  font-family: "Verdana";
 }
 
 .ndisor-wrapper{
-  padding-bottom: 80px;
+  width: 100%;
+  height: 400px;
+  margin: 0 auto;
+  padding-top: 30px;
+  padding-bottom: 30px;
   padding-left: 5%;
   padding-right: 5%;
   text-align: center;
+  color: #080829;
 }
 
 .tentang{
+  margin-top: 30px;
 	font-size: 14px;
-	font-family: 
+	font-family: "Verdana";
+  color: #080829 ;
+}
+
+.middle-wrapper {
+  width: 100%;
+  height: 600px;
+  margin: 0 auto;
+  background-color: #F5F5F5;
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+}
+
+.middle-wrapper h3 {
+  text-align: center;
+  color: #080829;
+  
+}
+
+hr {
+  width: 250px;
+  border-top: 3px solid #080829;
+  border-radius: 15px;
+}
+
+.slider{
+  overflow: hidden;
+  margin: 30px auto;
+  width: 700px;
+  height: 400px;
+}
+ 
+.slider figure div{
+  width: 20%;
+  float: left;
+}
+ 
+.slider figure img{
+  width: 800px;
+  height: 400px;
+  float: left;
+}
+ 
+.slider figure{
+  position: relative;
+  width: 500%;
+  margin: 0;
+  left: 0;
+  animation: 20s slidy infinite;
+}
+ 
+@keyframes slidy{
+  0%{
+    left: 0%
+  }
+ 
+  10%{
+    left: 0%;
+  }
+ 
+  12%{
+    left: -100%;
+  }
+ 
+  22%{
+    left: -100%;
+  }
+ 
+  24%{
+    left: -200%;
+  }
+ 
+  34%{
+    left: -200%;
+  }
+ 
+  36%{
+    left: -300%;
+  }
+ 
+  46%{
+    left: -300%;
+  }
+ 
+  48%{
+    left: -400%;
+  }
+ 
+  58%{
+    left: -400%;
+  }
+ 
+  60%{
+    left: -300%;
+  }
+ 
+  70%{
+    left: -300%;
+  }
+ 
+  72%{
+    left: -200%;
+  }
+ 
+  82%{
+    left: -200%;
+  }
+ 
+  84%{
+    left: -100%;
+  }
+ 
+  94%{
+    left: -100%;
+  }
+ 
+  96%{
+    left: 0%;
+  }
+ 
+  100%{
+    left: 0%;
+  }
+}
+
+.middle-two-wrapper {
+  width: 100%;
+  height: 450px;
+  margin: 0 auto;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  /*background-color: #F5F5F5;*/
+  text-align: center;
+}
+
+.middle-two-wrapper h3 {
+   text-align: center;
+  color: #080829;
+}
+
+.cara {
+  float: left;
+  width: 25%;
+  margin-top: 30px;
+}
+
+.illustrasi {
+  position: relative;
+}
+
+.illustrasi img {
+  max-width: 80%;
+}
+
+.illustrasi p {
+  position: absolute;
+  padding-top: 5px;
+  width: 100%;
+  font-family: "Verdana";
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.text {
+  width: 60%;
+  display: inline-block;
+  margin-top: 50px;
+  font-size: 14px;
+  font-family: "Verdana";
+  color: #b3aeb5;
 }
