--- a/responsive.css
+++ b/responsive.css
@@ -18,6 +18,11 @@
     margin-bottom: 25px;
   }
   
+  .about-img img{
+    width: 430px;
+    height: 242px;
+  }
+  
   .slider {
     width: 525px;
     height: 300px;
@@ -33,8 +38,7 @@
   }
 
   #right {
-    width: 50%;
-    
+    width: 50%; 
   }
   
   .about-img {
@@ -91,8 +95,10 @@
     width: 100%; 
   }
   
-   .about-img {
-    width: 100%;
+  .about-img img{
+    width: 300px;
+    height: 150px;
+  
   }
   .slider {
     width: 350px;
