--- a/responsive.css
+++ b/responsive.css
@@ -96,17 +96,17 @@
   }
   
    .slider {
-    width: 450px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
   }
 
   .slider figure img {
-    width: 350px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
   }
 
   .about-img img{
-    width: 415px;
-    height: 230px;
+    width: 100%;
+    height: 100%;
   }
 }
