--- a/responsive.css
+++ b/responsive.css
@@ -19,18 +19,23 @@
   }
   
   .about-img img{
-    width: 50%;
-    height: 50%;
+    width: 430px;
+    height: 242px;
   }
   
+  .illustrasi img{
+    width: 90px;
+    height: 80px;
+  }
+
   .slider {
-    width: 50%;
-    height: 50%;
+    width: 525px;
+    height: 300px;
   }
 
   .slider figure img {
-    width: 50%;
-    height: 50%;
+    width: 600px;
+    height: 300px;
   }
 
   #left {
@@ -39,12 +44,7 @@
 
   #right {
     width: 50%; 
-  }
-  
-  .about-img {
-    width: 50%;
-  }
-  
+  }  
 }
 
 /* Untuk Smartphone */
@@ -96,17 +96,17 @@
   }
   
    .slider {
-    width: 100%;
-    height: 100%;
+    width: 450px;
+    height: 200px;
   }
 
   .slider figure img {
-    width: 100%;
-    height: 100%;
+    width: 350px;
+    height: 200px;
   }
 
   .about-img img{
-    width: 100%;
-    height: 100%;
+    width: 400px;
+    height: 200px;
   }
 }
