--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,11 @@ a {
   text-decoration: none;
 }
 
+html, body, ul, ol, li, h1, h2, h3, h4, h5, h6, p, div {
+    margin: 0;
+    padding: 0;
+}
+
 h2{
 	font-family: sans-serif;
 	font-weight: normal;
