--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,9 +12,10 @@ a {
 }
 
 h2{
-	font-family: sans-serif;
 	font-weight: normal;
 }
+
+
 
 .clear {
   clear: left;
@@ -22,118 +23,44 @@ h2{
 
 .container {
   max-width: 1170px;
-  width: 100%;
   padding: 0 15px;
   margin: 0 auto;
 }
 
 .top-wrapper {
-  padding: 520px 0 128px 0;
+  padding: 300px 0 128px 0;
   background-image: url(danautoba2.jpg);
   background-size: cover;
   color: white;
-  position: relative;
-  
-}
-.content h1 {
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
   text-align: center;
-  top: 32%;
+}
+
+.top-wrapper h1 {
   opacity: 1;
+  font-size: 40px;
   letter-spacing: 3px;
   margin-bottom: 10px;
 }
 
-.content h3 {
-  position: absolute;
-  top: 40%;
+.top-wrapper h3 {
   opacity: 0.8;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  text-align: center;
+  font-size: 20px;
   margin-bottom: 10px;
 }
 
-.content p {
-  position: absolute;
-  top: 46%;
+.top-wrapper p {
   opacity: 0.9;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 3px;
 }
-
-.vacation {
-  position: absolute;
-  top: 55%;
-  background-color: white;
-  color: #5f5d60;
-  border: 0px solid #5f5d60;
-  border-radius: 20px;
-  width: 90%;
-  height: 100px;
-  box-sizing: border-box;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  text-align: center;
-}
-
-.isi {
-  width: 20%;
-  float: left;
-  padding-left: 1%;
-  padding-right: 3%;
-}
-
-.isi-content {
-  width: 80%;
-  display: inline-block;
-  position: relative;
-}
-
-.isi-content p{
-  color: #5f5d60;
-  font-size: 12px;
-  font-family: "Verdana";
-  text-align: left;
-  width: 285px;
-  margin-top: 20px;
-  margin-bottom: 5px;
-}
-
-input {
-  width: 150px;
-  padding: 5px;
-  font-size: 12px;
-  font-family: "Verdana";
-  text-decoration: none;
-  color: #A1A1A1;
-  }     
 
 .btn-wrapper {
   text-align: center;
-  margin: 8px 10px;
+  margin: 20px 0;
   font-weight: bold;
 }
 
-.btn-wrapper a {
-  margin: 24px -42px;
-  font-size: 12px;
-  width: 190px;
+.btn-wrapper p {
+  margin: 10px 0;
 }
 
 .booking {
@@ -141,10 +68,10 @@ input {
 }
 
 .btn {
-  border: 0px solid #FDB11C;
+  border: 1px solid #FDB11C;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  padding: 12px 40px;
+  padding: 12px 24px;
   color: white;
   display: inline-block;
   opacity: 0.9;
@@ -156,6 +83,11 @@ input {
 .btn:hover {
   opacity: 1;
   transform: translateY(-8px);
+}
+
+.btn:active {
+	position: relative;
+	top: 0.5px;
 }
 
 header {
@@ -249,29 +181,27 @@ img:hover {
   padding-left: 5%;
   padding-right: 5%;
   background-color: #f7f7f7;
-  text-align: center;
- 
+  text-align: center; 
 }
 
 .heading {
   padding-top: 30px;
   padding-bottom: 30px;
-  color: #5f5d60;
+  color: white;
 }
 
 .heading h3 {
   text-align: center;
   color: #080829;
-
 }
+
 .lesson {
   float: left;
   width: 20%;
 }
 
 .lesson-icon {
-  position: relative;
-  
+  position: relative; 
 }
 
 .lesson-icon p {
@@ -282,8 +212,6 @@ img:hover {
   color: #5f5d60;
   font-weight: bold;
   font-size: 15px;
- 
- 
 }
 
 .text-contents {
@@ -310,13 +238,13 @@ img:hover {
   width: 45%;
   height: 250px;
   float: left;
+  text-align: justify;
 }
 
 .tentang{
   padding-top: 50px;
 	font-size: 14px;
 	font-family: "Verdana";
-  text-align: justify;
 }
 
 #right {
@@ -326,7 +254,7 @@ img:hover {
 }
 
 .about-img {
-  position : absolute;
+  position : relative;
 }
 
 .middle-wrapper {
@@ -450,6 +378,8 @@ hr {
 }
 
 .middle-two-wrapper {
+  width: 100%;
+  height: 500px;
   padding-bottom: 80px;
   padding-left: 5%;
   padding-right: 5%;
@@ -469,6 +399,7 @@ hr {
 
 .illustrasi {
   position: relative;
+  padding-bottom: 30px
 }
 
 .illustrasi p {
@@ -477,7 +408,7 @@ hr {
   width: 100%;
   font-family: "Verdana";
   font-weight: bold;
-  font-size: 14px;
+  font-size: 15px;
   color: #5f5d60;
 }
 
@@ -492,90 +423,83 @@ hr {
 
 /*CSS Bagian Footer*/
 /*======================*/
-.kotak-footer {
-  width: 1170px;
-  margin: 0 auto;
+footer {
+	width: 100%;
+	margin: 0 auto;
 }
 
 .footer-wrapper {
-  height: 260px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #080829;
-  text-align: center;
-  opacity: 0.9;
-
+	height: 400px;
+	padding-bottom: 50px;
+	background-color: #192a56;
+	text-align: center;
+	opacity: 0.9;
 }
 
 .heading-footer {
-  color: #ffff;
-  border-bottom: 3px solid #fff;
+	padding: 30px 0 30px 0;
+	color: #5f5d60;
+	border-bottom: 0.5px solid #eee;
 }
 
-.heading-footer h3 {
-  font-family: "Verdana";
-  font-weight: normal;
-  text-align: center;
-  color: #fff;
-  margin: 15px 0px;
+.heading-footer h2 {
+	font-weight: normal;
+	font-size: 32px;
+	text-align: center;
+	color: #fff;
+  font-family: "Raleway";
 }
 
 .columns{
-  padding-top: 15px;
+	padding-top: 5px;
+  float: center;
 }
+
 .column {
-  float: left;
-  width: 33.33%;
+	float: left;
+	width: 50%;
 }
 
-.column img {
-  padding-right: 175px;
+.column h2 {
+	font-size: 14px;
+	letter-spacing: 4px;
+	margin-bottom: 15px;
+	color: #fff;
 }
 
-.column h4 {
-  font-family: "Verdana";
-  letter-spacing: 1px;
-  margin-bottom: 15px;
-  color: #fff;
-  margin-top: 0px;
-  padding-right: 0px;
+.column h3 {
+	font-size: 12.5px;
+	color: white;
+	margin-bottom: 8px;
+	letter-spacing: 0.5px;
 }
 
-.column p {
-  font-family: "Verdana";
-  font-size: 12px;
-  color: white;
-  margin-top: 0;
-  margin-bottom: 8px;
+.but {
+	padding: 8px 16px;
+	color: white;
+	display: inline-block;
+	opacity: 0.7;
+	border-radius: 4px;
 }
 
-.button {
-  padding: 8px 16px;
-  color: white;
-  display: inline-block;
-  opacity: 0.7;
-  border-radius: 4px;
-  font-size: 12px;
+.but:active {
+	position: relative;
+	top: 0.5px;
 }
 
-.button:active {
-  position: relative;
-  top: 0.5px;
-}
-
-.button:hover {
-  opacity: 1;
+.but:hover {
+	opacity: 1;
 }
 
 .fa {
-  margin-right: 5px;
+	margin-right: 5px;
 }
 
 .facebook{
-  background-color: #3b5998;
-  margin-bottom: 10px;
+	background-color: #3b5998;
+	margin-bottom: 10px;
 }
 
 .twitter {
-  background-color: #55acee;
+	background-color: #55acee;
 }
