--- a/responsive.css
+++ b/responsive.css
@@ -5,25 +5,67 @@
     margin-bottom: 25px;
   }
   
-  .top-wrapper h1 {
+  .content h1 {
     font-size: 32px;
+    margin: -5px 15px;
+  }
+
+  .content h3 {
+    font-size: 16px;
+    margin: 27px 15px;
+  }
+
+  .content p {
+    font-size: 16px;
+    margin: 29px 15px;
+  }
+
+  
+  .heading h2 {
+    font-size: 20px;
+    margin: 0 30px;
   }
   
-  .heading-footer h3 {
-    font-size: 26px
-		margin-left: 15px;
+  .btn {
+    width: 100%;
+    padding: 5px 45px;
+  }
+
+  .btn-wrapper {
+    margin: 8px 0;
+  }
+
+  .btn-wrapper a {
+    width: 150px;
+    margin: 7px 14px;
+  }
+
+  .vacation {
+    height : 128px;
+  }
+
+  .isi {
+    width: 31%;
+    padding-left: 30px;
+    margin-bottom: 2px;  
+  }
+
+  .isi-content p {
+    margin-top: 8px;
+    margin-bottom: 2px;
+    padding-left: 15px
+  }
+  
+  input {
+    padding-left: 5px;
+    margin: 0px 13px;
   }
 
   .cara {
     width: 50%;
-    margin-bottom: 25px;
+    margin: 25px 0px;
   }
-  
-  .about-img img{
-    width: 100%;
-    height: 242px;
-  }
-  
+
   .illustrasi img{
     width: 90px;
     height: 80px;
@@ -39,41 +81,41 @@
     height: 300px;
   }
 
+  .about-img img{
+    width: 430px;
+    height: 242px;
+  }
+
   #left {
     width: 50%;
   }
 
   #right {
-    width: 50%; 
-  }  
-  
-  .container {
-		text-align: left;
-		width: 100%;
-	}
-
-	.column h2 {
-		font-size: 14px;
-	}
-
-	.column h3 {
-		font-size: 11px;
-		margin-left: 20px;	
-	}
-
-	.column img {
-		margin-left: 20px;
-	}
-
-  .btn {
-		font-size: 14px;
-	}
-
-  .footer-wrapper {
-    width: 100%;
-    flex-direction: column;
-    margin: 350px 0;
+    width: 50%;
+    
   }
+
+  .text {
+    width: 65%;
+  }
+
+  .kotak-footer {
+    width: 80%;
+  }
+
+  .column h4 {
+    font-size: 12px;
+  }
+
+  .column h3 {
+    font-size: 12px;
+    margin-left: 20px;  
+  }
+
+  .button {
+    font-size: 12px;
+  }
+
 }
 
 /* Untuk Smartphone */
@@ -88,20 +130,64 @@
 
   .menu-icon {
     display: block;
+
   }
   
-  .top-wrapper h1 {
-    font-size: 24px;
-    line-height: 36px;
+  .content h1 {
+    text-align: left;
+    font-size: 20px;
+    line-height: 28px;
+    margin: 4px 30px;
   }
-  
-  .top-wrapper p {
+
+  .content h3 {
+    text-align: left;
     font-size: 14px;
     line-height: 20px;
+    margin: 15px 30px;
+  }
+  
+  .content p {
+    text-align: left;
+    font-size: 12px;
+    line-height: 20px;
+    margin: 25px 30px;
   }
 
   .btn {
     width: 100%;
+    padding: 5px 45px;
+  }
+
+  .btn-wrapper {
+    margin: 8px 0px;
+  }
+
+  .btn-wrapper a {
+    width: 150px;
+    margin: 1px auto;
+  }
+
+  .vacation {
+    height: 185px;
+
+  }
+
+  .isi {
+    width: 50%;
+    padding-left: 13px;
+    margin-bottom: 7px;  
+  }
+
+  .isi-content p {
+    margin-top: 7px;
+    margin-bottom: 2px;
+    font-size: 11px;
+    padding-left: 2px;
+  }
+
+  input {
+    margin: 0px 0px;
   }
   
   .lesson {
@@ -121,9 +207,10 @@
   }
 
   #right {
-    width: 100%; 
+    width: 100%;
+    
   }
-  
+
   .slider {
     width: 450px;
     height: 250px;
@@ -135,36 +222,39 @@
   }
 
   .about-img img{
-    width: 400px;
-    height: 200px;
+    width: 450px;
+    height: 250px;
+    text-align: center;
+  }
+  
+  .footer-wrapper {
+    height: 500px;
   }
 
-	.column h3{
-		text-align: justify;
-		margin-left: 20px;
-		margin-top: 15px;
-	}
+  .column h3{
+    text-align: justify;
+    margin-left: 20px;
+    margin-top: 15px;
+  }
 
-	.twitter {
-		margin-bottom: 15px;
-	}
+  .column img {
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-bottom: 10px;
+  }
+
+  .twitter {
+    margin-bottom: 20px;
+  }
   
   .column {
-		text-align: center;
-		width: 100%;
-	}
-
-  .footer-wrapper {
-    flex-direction: column;
+    text-align: center;
     width: 100%;
-    height: 600px;
-    margin: 600px 0;
   }
-
-  .heading h3{
-		font-size: 18px;
-		text-align: center;
-		margin: 10px 0 0 15px;
-	}
-
+  
+    .heading-footer h2{
+    font-size: 18px;
+    text-align: left;
+    margin: 10px 0 0 15px;
+  }
 }
