--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,10 +12,9 @@ a {
 }
 
 h2{
+	font-family: sans-serif;
 	font-weight: normal;
 }
-
-
 
 .clear {
   clear: left;
@@ -23,44 +22,118 @@ h2{
 
 .container {
   max-width: 1170px;
+  width: 100%;
   padding: 0 15px;
   margin: 0 auto;
 }
 
 .top-wrapper {
-  padding: 300px 0 128px 0;
+  padding: 520px 0 128px 0;
   background-image: url(danautoba2.jpg);
   background-size: cover;
   color: white;
-  text-align: center;
+  position: relative;
+  
 }
-
-.top-wrapper h1 {
+.content h1 {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  top: 32%;
   opacity: 1;
-  font-size: 40px;
   letter-spacing: 3px;
   margin-bottom: 10px;
 }
 
-.top-wrapper h3 {
+.content h3 {
+  position: absolute;
+  top: 40%;
   opacity: 0.8;
-  font-size: 20px;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
   margin-bottom: 10px;
 }
 
-.top-wrapper p {
+.content p {
+  position: absolute;
+  top: 46%;
   opacity: 0.9;
-  margin-bottom: 3px;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  margin-bottom: 30px;
 }
+
+.vacation {
+  position: absolute;
+  top: 55%;
+  background-color: white;
+  color: #5f5d60;
+  border: 0px solid #5f5d60;
+  border-radius: 20px;
+  width: 90%;
+  height: 100px;
+  box-sizing: border-box;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
+.isi {
+  width: 20%;
+  float: left;
+  padding-left: 1%;
+  padding-right: 3%;
+}
+
+.isi-content {
+  width: 80%;
+  display: inline-block;
+  position: relative;
+}
+
+.isi-content p{
+  color: #5f5d60;
+  font-size: 12px;
+  font-family: "Verdana";
+  text-align: left;
+  width: 285px;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+
+input {
+  width: 150px;
+  padding: 5px;
+  font-size: 12px;
+  font-family: "Verdana";
+  text-decoration: none;
+  color: #A1A1A1;
+  }     
 
 .btn-wrapper {
   text-align: center;
-  margin: 20px 0;
+  margin: 8px 10px;
   font-weight: bold;
 }
 
-.btn-wrapper p {
-  margin: 10px 0;
+.btn-wrapper a {
+  margin: 24px -42px;
+  font-size: 12px;
+  width: 190px;
 }
 
 .booking {
@@ -68,10 +141,10 @@ h2{
 }
 
 .btn {
-  border: 1px solid #FDB11C;
+  border: 0px solid #FDB11C;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  padding: 12px 24px;
+  padding: 12px 40px;
   color: white;
   display: inline-block;
   opacity: 0.9;
@@ -83,11 +156,6 @@ h2{
 .btn:hover {
   opacity: 1;
   transform: translateY(-8px);
-}
-
-.btn:active {
-	position: relative;
-	top: 0.5px;
 }
 
 header {
@@ -181,27 +249,29 @@ img:hover {
   padding-left: 5%;
   padding-right: 5%;
   background-color: #f7f7f7;
-  text-align: center; 
+  text-align: center;
+ 
 }
 
 .heading {
   padding-top: 30px;
   padding-bottom: 30px;
-  color: white;
+  color: #5f5d60;
 }
 
 .heading h3 {
   text-align: center;
   color: #080829;
-}
 
+}
 .lesson {
   float: left;
   width: 20%;
 }
 
 .lesson-icon {
-  position: relative; 
+  position: relative;
+  
 }
 
 .lesson-icon p {
@@ -212,6 +282,8 @@ img:hover {
   color: #5f5d60;
   font-weight: bold;
   font-size: 15px;
+ 
+ 
 }
 
 .text-contents {
@@ -238,13 +310,13 @@ img:hover {
   width: 45%;
   height: 250px;
   float: left;
-  text-align: justify;
 }
 
 .tentang{
   padding-top: 50px;
 	font-size: 14px;
 	font-family: "Verdana";
+  text-align: justify;
 }
 
 #right {
@@ -254,7 +326,7 @@ img:hover {
 }
 
 .about-img {
-  position : relative;
+  position : absolute;
 }
 
 .middle-wrapper {
@@ -378,8 +450,6 @@ hr {
 }
 
 .middle-two-wrapper {
-  width: 100%;
-  height: 500px;
   padding-bottom: 80px;
   padding-left: 5%;
   padding-right: 5%;
@@ -399,7 +469,6 @@ hr {
 
 .illustrasi {
   position: relative;
-  padding-bottom: 30px
 }
 
 .illustrasi p {
@@ -408,7 +477,7 @@ hr {
   width: 100%;
   font-family: "Verdana";
   font-weight: bold;
-  font-size: 15px;
+  font-size: 14px;
   color: #5f5d60;
 }
 
@@ -423,83 +492,90 @@ hr {
 
 /*CSS Bagian Footer*/
 /*======================*/
-footer {
-	width: 100%;
-	margin: 0 auto;
+.kotak-footer {
+  width: 1170px;
+  margin: 0 auto;
 }
 
 .footer-wrapper {
-	height: 400px;
-	padding-bottom: 50px;
-	background-color: #192a56;
-	text-align: center;
-	opacity: 0.9;
+  height: 260px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #080829;
+  text-align: center;
+  opacity: 0.9;
+
 }
 
 .heading-footer {
-	padding: 30px 0 30px 0;
-	color: white;
-	border-bottom: 0.5px solid #eee;
+  color: #ffff;
+  border-bottom: 3px solid #fff;
 }
 
 .heading-footer h3 {
-	font-weight: normal;
-	font-size: 32px;
-	text-align: center;
-	color: #fff;
-  font-family: "Raleway";
+  font-family: "Verdana";
+  font-weight: normal;
+  text-align: center;
+  color: #fff;
+  margin: 15px 0px;
 }
 
 .columns{
-	padding-top: 5px;
-  float: center;
+  padding-top: 15px;
+}
+.column {
+  float: left;
+  width: 33.33%;
 }
 
-.column {
-	float: left;
-	width: 50%;
+.column img {
+  padding-right: 175px;
 }
 
 .column h4 {
-	font-size: 14px;
-	letter-spacing: 4px;
-	margin-bottom: 15px;
-	color: white;
+  font-family: "Verdana";
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+  color: #fff;
+  margin-top: 0px;
+  padding-right: 0px;
 }
 
 .column p {
-	font-size: 12.5px;
-	color: white;
-	margin-bottom: 8px;
-	letter-spacing: 0.5px;
+  font-family: "Verdana";
+  font-size: 12px;
+  color: white;
+  margin-top: 0;
+  margin-bottom: 8px;
 }
 
 .button {
-	padding: 8px 16px;
-	color: white;
-	display: inline-block;
-	opacity: 0.7;
-	border-radius: 4px;
+  padding: 8px 16px;
+  color: white;
+  display: inline-block;
+  opacity: 0.7;
+  border-radius: 4px;
+  font-size: 12px;
 }
 
 .button:active {
-	position: relative;
-	top: 0.5px;
+  position: relative;
+  top: 0.5px;
 }
 
 .button:hover {
-	opacity: 1;
+  opacity: 1;
 }
 
 .fa {
-	margin-right: 5px;
+  margin-right: 5px;
 }
 
 .facebook{
-	background-color: #3b5998;
-	margin-bottom: 10px;
+  background-color: #3b5998;
+  margin-bottom: 10px;
 }
 
 .twitter {
-	background-color: #55acee;
+  background-color: #55acee;
 }
